Added dev files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html> <html> <head> <meta charset="utf-8"> <title>React Parcel Demo</title> <link href="/dist/c84ffcde37b1caeaa0e2767187d02227.css" rel="stylesheet"> <link rel="stylesheet" href="/dist/edfc727ee0c97a9eed757768a6f16ead.css"></head> <body> <div id="app"></div> <script src="/dist/edfc727ee0c97a9eed757768a6f16ead.js"></script> </body> </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>React Parcel Demo</title>
+    <base href="/">
+    <link href="/dist/c84ffcde37b1caeaa0e2767187d02227.css" rel="stylesheet">
+<script src="/dist/c84ffcde37b1caeaa0e2767187d02227.js"></script><link rel="stylesheet" href="/dist/edfc727ee0c97a9eed757768a6f16ead.css"></head>
+<body>
+<div id="app"></div>
+<script src="/dist/edfc727ee0c97a9eed757768a6f16ead.js"></script>
+</body>
+</html>
